rm _Inline on make clean overloading of 0+
git-svn-id: http://svn.pugscode.org/pugs@10142 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/pX/Common/Inline-Parrot/Makefile
+++ b/misc/pX/Common/Inline-Parrot/Makefile
@@ -2,6 +2,7 @@ all: libparrotside.so loadlib.pbc
 clean:
 	rm *.pbc
 	rm *.so
+	rm _Inline
 loadlib.pbc: loadlib.pir
 	parrot -o loadlib.pbc loadlib.pir
 libparrotside.so: parrotside.c
