--- a/Pugs.cabal.in
+++ b/Pugs.cabal.in
@@ -22,5 +22,5 @@ extra-lib-dirs: __LIB_DIRS__
 extensions: ForeignFunctionInterface
 include-dirs: __INCLUDE_DIRS__
 hs-source-dirs: src third-party/fps
-other-modules: Data.DeepSeq Data.Yaml.Syck DrIFT.JSON DrIFT.Perl5 DrIFT.YAML RRegex RRegex.PCRE RRegex.Syntax System.FilePath UTF8
+other-modules: Data.ByteString Data.ByteString.Char8 Data.DeepSeq Data.Yaml.Syck DrIFT.JSON DrIFT.Perl5 DrIFT.YAML RRegex RRegex.PCRE RRegex.Syntax System.FilePath UTF8
 ghc-options: __OPTIONS__
