--- a/Pugs.cabal.in
+++ b/Pugs.cabal.in
@@ -4,7 +4,7 @@ license: GPL
 license-file: LICENSE
 copyright: 2005-2006, Audrey Tang
 maintainer: Audrey Tang <autrijus@autrijus.org>
-build-depends: QuickCheck -any, base -any, mtl -any, stm -any, haskell98 -any, parsec -any, network -any, fps >= 0.5, template-haskell -any__DEPENDS__
+build-depends: fps -any, QuickCheck -any, base -any, mtl -any, stm -any, haskell98 -any, parsec -any, network -any, template-haskell -any__DEPENDS__
 stability: experimental
 homepage: http://pugscode.org/
 synopsis: A Perl 6 Implementation
