[docs/summaries/2006/10-07.yaml] fixed typo
git-svn-id: http://svn.pugscode.org/pugs@14097 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/summaries/2006/10-07.yaml
+++ b/docs/summaries/2006/10-07.yaml
@@ -589,7 +589,7 @@ lists:
           He wondered if this meant that an else statement like
           `};`
           `else {`
-          would be the same as the same without the semicolon.
+          would be the same as without the semicolon.
       - date_from: 1160079094
         date_to: 1160081820
         hidden: ~
