Jesse gives this uri for planetsix perl
git-svn-id: http://svn.pugscode.org/pugs@14166 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/summaries/proto.yaml
+++ b/docs/summaries/proto.yaml
@@ -35,7 +35,7 @@ extra:
     - name: Perl 6 Development
       uri: http://dev.perl.org/perl6
     - name: Planet Perl Six
-      uri: http://planetsix.perl.org/perl6
+      uri: http://planetsix.perlfoundation.org/
 lists:
   - name: perl6-language
     title: Language
