util/config-template.yml - Update comment now that including Test in Prelude is only a minor win (general precompiling now works) rather than a major win, and Math::Basic is there by default.
git-svn-id: http://svn.pugscode.org/pugs@14232 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/util/config-template.yml
+++ b/util/config-template.yml
@@ -19,10 +19,9 @@ smoke_upload: 0
 precompile_prelude: true
 
 # Include additional modules in the precompiled Prelude? This requires the
-# preceding option to be enabled. This makes pugs even slower to build,
-# but makes the test suite faster still. It's worth it if you're running
-# smoke tests, but otherwise probably not.
-#
+# preceding option to be enabled.  Including Test makes pugs even slower to
+# build, but makes the test suite slightly faster still.  It may be worth
+# it if you're running smoke tests, but otherwise probably not.
 # Pass a *single line* YAML array of filenames here, comma separated.
 
 precompile_modules: [ ext/Math-Basic/lib/Math/Basic.pm ]
