* Releng: Metadata adjustments.
git-svn-id: http://svn.pugscode.org/pugs@14396 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 name: Perl6-Pugs
-version: 6.2.11
+version: 6.2.13
 abstract: A Perl 6 Implementation
 author: Audrey Tang <autrijus@autrijus.org>
 license: perl
@@ -8,7 +8,11 @@ build_requires:
 no_index:
   directory:
     - debian
-    - docs
+    - docs/Perl6
+    - docs/summaries
+    - docs/AES
+    - docs/notes
+    - docs/other
     - examples
     - ext
     - inc
