* Massive revisionism: Change all files in docs/ to mention svn.pugscode.org   not svn.openfoundry.org.
git-svn-id: http://svn.pugscode.org/pugs@14673 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/summaries/2006/08-26.yaml
+++ b/docs/summaries/2006/08-26.yaml
@@ -930,7 +930,7 @@ lists:
         summary: |-
           Agent Zhang announced that the test snippets in the Pugs test suite
           have now been included in the Synopses, thanks to
-          [smartlinks](http://svn.openfoundry.org/pugs/t/README).
+          [smartlinks](http://svn.pugscode.org/pugs/t/README).
       - date_from: 1156362443
         date_to: 1156362443
         hidden: ~
