Small change to template for yaml file
git-svn-id: http://svn.pugscode.org/pugs@14860 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/summaries/proto.yaml
+++ b/docs/summaries/proto.yaml
@@ -11,7 +11,7 @@ extra:
       body: |-
         This summary was prepared using
         [Mail::Summary::Tools](http://search.cpan.org/dist/Mail-Summary-Tools/),
-        now available on CPAN.
+        available on CPAN.
         
         If you appreciate Perl, consider [contributing to the Perl
         Foundation](http://donate.perlfoundation.org) to help support the
