Added in a new year's message
git-svn-id: http://svn.pugscode.org/pugs@14973 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/summaries/2006/12-30.yaml
+++ b/docs/summaries/2006/12-30.yaml
@@ -13,6 +13,8 @@ extra:
         Thank you to everyone who has pointed out mistakes and offered
         suggestions for improving this series.  Comments on this summary can be
         sent to Ann Barcomb, <kudra@domaintje.com>.
+        
+        Happy New Year!
       title: Acknowlegements
     - body: |-
         This summary can be found in the following places:
