[kp6-mp6like] runtime in KindaPerl6::Runtime::MiniPerl6Like for and .map for arrays support autobox is used
git-svn-id: http://svn.pugscode.org/pugs@20046 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-KindaPerl6/targets.yml
+++ b/v6/v6-KindaPerl6/targets.yml
@@ -193,6 +193,9 @@ KP6-MP6:
     compiled/perl5-kp6-mp6/lib/KindaPerl6/Runtime/Perl5V6/%.pm: src/KindaPerl6/Runtime/Perl5V6/%.pm
     	$(CP) $< $@
 
+    compiled/perl5-kp6-mp6/lib/KindaPerl6/Runtime/MiniPerl6Like/%.pm: src/KindaPerl6/Runtime/MiniPerl6Like/%.pm
+    	$(CP) $< $@
+
     
     compiled/perl5-kp6-mp6/lib/KindaPerl6.pm: src/KindaPerl6.pm
     	$(CP) $< $@
