[smop] implementing low-level scalar... not working yet... I am commiting in the hope that someone tries to understand why test/11_lowlevel_scalar.sm0p is not being match by sm0p/KP6sm0p.pl
git-svn-id: http://svn.pugscode.org/pugs@20083 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -7,7 +7,7 @@ AM_CFLAGS = -Wall -D_GNU_SOURCE -I$(top_srcdir)/include
 
 check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	04_interpreter.t 05_capture.t 06_native_bool.t 07_native_int.t \
-	08_native_uint.t 09_threads.t 10_lowlevel_methods.t
+	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
 02_stack_t_SOURCES = 02_stack.sm0p
@@ -19,3 +19,4 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 08_native_uint_t_SOURCES = 08_native_uint.c
 09_threads_t_SOURCES = 09_threads.sm0p
 10_lowlevel_methods_t_SOURCES = 10_lowlevel_methods.c
+11_lowlevel_scalar_t_SOURCES = 11_lowlevel_scalar.sm0p
