[elf_a] Added IR construction and P5 emitting.  ./elf_a_create.pl -e 'say(3)' makes it from p6 to p5.
git-svn-id: http://svn.pugscode.org/pugs@20141 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
@@ -3,13 +3,17 @@
 # Otherwise, we'll drive this from the parse tree.
 # Lots of work needed.
 
+CompUnit   statements # unit_type name traits attributes methods body
+
+Val_Int    text
+
+
+
 PackageDeclarator kind name block
 Block     statements
 Quote     concat
 
-CompUnit    unit_type name traits attributes methods body
 
-Val_Int    int
 Val_Bit    bit
 Val_Num    num
 Val_Buf    buf
