[elf_a] "say 3" and "say 'e'" work.  t/01-sanity/01-tap.t passes.  There's also an unfinished attempt at if().
git-svn-id: http://svn.pugscode.org/pugs@20149 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -16,3 +16,33 @@ Apply.new($m<subshortname>,$m<semilist>)
 name
 $m<ident>
 
+statement_control:use
+Use.new($m<module_name>)
+
+module_name:depreciated
+*text*
+
+term:listop
+Apply.new($m<ident>,[$m<arglist>])
+
+quote:q
+Val_Buf.new($m<text>)
+
+quote:qq
+Val_Buf.new($m<text>)
+
+infix
+Apply.new("infix:".*text*,[$m<left>,$m<right>])
+
+# This was a quick experiment.  It's nowhere near close to working yet.
+statement_control:if
+If.new([$m<if_expr>,$m<if_block>,@{$m<elsif>}],$m<else>)
+
+if__else
+*1*
+
+pblock
+*1*
+
+block
+Block.new($m<statementlist>)
