--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -7,4 +7,25 @@ Val_Int
 $n<text>
 
 Apply
-$n<code>.'('.join(",",@{$n<arguments>}).')'
+if($n<code> =~ /^infix:(.+)$/) {
+  my($l,$r)=@{$n<arguments>};
+  my $op = $1;
+  if($op eq '~'){ "($l . $r)" }
+  else { "($l $op $r)" }
+}
+else {
+  $n<code>.'('.join(",",@{$n<arguments>}).')'
+}
+
+Use
+""
+
+Val_Buf
+"'".$n<buf>."'"
+
+# If isn't working yet.
+If
+'if('.$n<cond>.")\n".$n<body>.$n<otherwise>
+
+Block
+'{'.join(";\n",$n<statements>).'}'
