[elf_a] A start at sanity/03-equal.t.
git-svn-id: http://svn.pugscode.org/pugs@20150 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -7,6 +7,9 @@ statement
 expect_term
 $m<noun>
 
+term:expect_term
+$m<noun>
+
 integer
 Val_Int.new(*text*)
 
@@ -33,6 +36,30 @@ Val_Buf.new($m<text>)
 
 infix
 Apply.new("infix:".*text*,[$m<left>,$m<right>])
+
+scope_declarator:my
+my $vd = $m<scoped>;
+Decl.new('my',undef,$vd->[0],$vd->[1])
+
+scoped
+*1*
+
+variable_decl
+[$m<variable>,$m<default_value>]
+
+variable
+Var.new($m<sigil>,$m<twigil>,$m<desigilname>)
+
+sigil
+*text*
+
+twigil
+*text*
+
+circumfix
+my $s = *text*;
+my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
+Apply.new("circumfix:".$name,$m<kludge_name>)
 
 # This was a quick experiment.  It's nowhere near close to working yet.
 statement_control:if
