--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -8,20 +8,32 @@ $n<text>
 
 Apply
 if($n<code> =~ /^infix:(.+)$/) {
-  my($l,$r)=@{$n<arguments>};
   my $op = $1;
+  my($l,$r)=@{$n<arguments>};
   if($op eq '~'){ "($l . $r)" }
   else { "($l $op $r)" }
+}
+elsif($n<code> =~ /^circumfix:(.+)/) {
+  my $op = $1;
+  my($arg)=@{$n<arguments>};
+  $op =~ s/ /$arg/;
+  $op  
 }
 else {
   $n<code>.'('.join(",",@{$n<arguments>}).')'
 }
+
+Decl
+$n<decl>.' '.$n<var>
 
 Use
 ""
 
 Val_Buf
 "'".$n<buf>."'"
+
+Var
+$n<sigil>.$n<name>
 
 # If isn't working yet.
 If
