--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
@@ -45,7 +45,7 @@ Apply   code arguments
 Return  result
 If      cond body otherwise
 While   cond body
-Decl    decl type var
+Decl    decl type var default
 Sig     invocant positional
 
 Lit_Capture  invocant array hash
