[STD_red] Tweak If, Decl, and string emit.  Fake use().  A couple of t sanity tests pass.
git-svn-id: http://svn.pugscode.org/pugs@20152 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -25,6 +25,9 @@ Use.new($m<module_name>)
 module_name:depreciated
 *text*
 
+module_name:normal
+*text*
+
 term:listop
 Apply.new($m<ident>,[$m<arglist>])
 
@@ -61,9 +64,11 @@ my $s = *text*;
 my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
 Apply.new("circumfix:".$name,$m<kludge_name>)
 
-# This was a quick experiment.  It's nowhere near close to working yet.
 statement_control:if
-If.new([$m<if_expr>,$m<if_block>,@{$m<elsif>}],$m<else>)
+If.new($m<if_expr>,$m<if_block>,$m<elsif>,$m<else>)
+
+elsif
+[$m<elsif_expr>,$m<elsif_block>]
 
 if__else
 *1*
