--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -1,6 +1,6 @@
 CompUnit
 'package Main;
-use Perl6::Say;
+use Perl6::Say; use Data::Dumper;
 '.join(";\n",@{$n<statements>})
 
 Val_Int
@@ -11,33 +11,40 @@ if($n<code> =~ /^infix:(.+)$/) {
   my $op = $1;
   my($l,$r)=@{$n<arguments>};
   if($op eq '~'){ "($l . $r)" }
+  elsif($op eq ','){ "$l, $r" }
   else { "($l $op $r)" }
 }
 elsif($n<code> =~ /^circumfix:(.+)/) {
   my $op = $1;
   my($arg)=@{$n<arguments>};
-  $op =~ s/ /$arg/;
-  $op  
+  if(undef) {
+  } else {
+    $op =~ s/ /$arg/;
+    $op  
+  }
 }
 else {
   $n<code>.'('.join(",",@{$n<arguments>}).')'
 }
 
 Decl
-$n<decl>.' '.$n<var>
+$n<decl>.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
 
 Use
 ""
 
 Val_Buf
-"'".$n<buf>."'"
+local $Data::Dumper::Terse = 1;
+my $s = Data::Dumper::Dumper($n<buf>); chomp($s);
+$s;
 
 Var
 $n<sigil>.$n<name>
 
-# If isn't working yet.
 If
-'if('.$n<cond>.")\n".$n<body>.$n<otherwise>
+('if('.$n<test>.")\n".$n<body>."\n"
+.join("",map{'elsif('.$_->[0].")\n".$_->[1]."\n"} @{$n<elsif>})
+.($n<else> ?  "else\n".$n<else>->[0] : ""))
 
 Block
-'{'.join(";\n",$n<statements>).'}'
+'{'.join(";\n",@{$n<statements>}).'}'
