--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
@@ -43,8 +43,8 @@ Call    invocant hyper method arguments
 Apply   code arguments
 
 Return  result
-If      cond body otherwise
-While   cond body
+If      test body elsif else
+While   test body
 Decl    decl type var default
 Sig     invocant positional
 
