[elf_a] Added multiple file compilation, and an empty prelude.
git-svn-id: http://svn.pugscode.org/pugs@20153 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -1,6 +1,7 @@
 CompUnit
-'package Main;
-use Perl6::Say; use Data::Dumper;
+"\x23".'line 2 emitted_p5
+package Main;
+use Data::Dumper;
 '.join(";\n",@{$n<statements>})
 
 Val_Int
