[elf] Start of support for subs, classes, and method calls.
git-svn-id: http://svn.pugscode.org/pugs@20156 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -5,7 +5,24 @@ statement
 *1*
 
 expect_term
-$m<noun>
+my $base = $m<noun>;
+for my $post (@{$m->{hash}{post}||[]}) {
+  my $dotty = $post->{hash}{dotty};
+  if($dotty) {
+    $base = Call.new($base,undef,ir($dotty->{hash}{ident}),ir($dotty->{hash}{semilist}));
+  }
+  else {
+    die "AST expect_term hander doesnt know what to do with: \n";
+  }
+}
+$base
+
+post
+$m
+
+dotty:methodop
+$m
+
 
 term:expect_term
 $m<noun>
@@ -78,3 +95,24 @@ pblock
 
 block
 Block.new($m<statementlist>)
+
+routine_declarator:routine_def
+Sub.new($m<ident>->[0],$m<multisig>->[0],$m<block>)
+
+signature
+Sig.new(undef,$m<parsep>)
+
+parameter
+Lit_SigArgument.new($m<param_var>)
+
+param_var
+Var.new($m<sigil>,$m<twigil>,$m<ident>)
+
+package_declarator:class
+PackageDeclarator.new('class',$m<package_def><module_name>->[0],$m<package_def><block>)
+
+fulltypename
+join("::",@{$m<typename>})
+
+typename
+$m<name>
