--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -49,3 +49,26 @@ If
 
 Block
 '{'.join(";\n",@{$n<statements>}).'}'
+
+Sub
+'sub '.$n<name>.'{'.$n<sig>.$n<block>.'}'
+
+Sig
+my @a = @{$n<positional>};
+if(!@a) { "" }
+else {
+  'my('.join(",",@{$n<positional>}).')=@_;'."\n";
+}
+
+Lit_SigArgument
+$n<key>
+
+PackageDeclarator
+("\n{ package ".$n<name>.";\n".
+ "use Moose;\n".
+ "use Perl6::Say;\n". # XXX kludged
+ $n<block>.
+ "\n}\n");
+
+Call
+$n<invocant>.'->'.$n<method>.'('.join(",",@{$n<arguments>||[]}).')'
