[elf_a] Start of support for method decls. [elf_b] main.pl now uses a method main(). [STD_red] Provide a Match for method_def.
git-svn-id: http://svn.pugscode.org/pugs@20157 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -99,6 +99,9 @@ Block.new($m<statementlist>)
 routine_declarator:routine_def
 Sub.new($m<ident>->[0],$m<multisig>->[0],$m<block>)
 
+routine_declarator:method_def
+Method.new($m<ident>,$m<multisig>->[0],$m<block>)
+
 signature
 Sig.new(undef,$m<parsep>)
 
