--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -53,6 +53,10 @@ Block
 Sub
 'sub '.$n<name>.'{'.$n<sig>.$n<block>.'}'
 
+Method
+'sub '.$n<name>.'{my $self=shift;'.$n<sig>.$n<block>.'}'
+
+
 Sig
 my @a = @{$n<positional>};
 if(!@a) { "" }
