[elf_a] All sub()s appear in package main, regardless of where they are defined.  But method()s do the right thing.  And my $x = sub(){}; $x.(); now works.
git-svn-id: http://svn.pugscode.org/pugs@20158 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -97,7 +97,9 @@ block
 Block.new($m<statementlist>)
 
 routine_declarator:routine_def
-Sub.new($m<ident>->[0],$m<multisig>->[0],$m<block>)
+my $ident = $m<ident> ? $m<ident>->[0] : "";
+my $sig = $m<multisig> ? $m<multisig>->[0] : Sig.new(undef,[]);
+Sub.new($ident,$sig,$m<block>)
 
 routine_declarator:method_def
 Method.new($m<ident>,$m<multisig>->[0],$m<block>)
