--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -25,7 +25,12 @@ elsif($n<code> =~ /^circumfix:(.+)/) {
   }
 }
 else {
-  $n<code>.'('.join(",",@{$n<arguments>}).')'
+  my $f = $n<code>;
+  if($f =~ /^\$\w+$/) {
+     $f.'->('.join(",",@{$n<arguments>}).')';
+  }else{
+     '::'.$f.'('.join(",",@{$n<arguments>}).')';
+  }
 }
 
 Decl
@@ -48,7 +53,7 @@ If
 .($n<else> ?  "else\n".$n<else>->[0] : ""))
 
 Block
-'{'.join(";\n",@{$n<statements>}).'}'
+''.join(";\n",@{$n<statements>}).''
 
 Sub
 'sub '.$n<name>.'{'.$n<sig>.$n<block>.'}'
