[elf_a] Start of support for arrays.  "my $x = [2,3,4]; say $x.[1]; $x.push(6);" works.
git-svn-id: http://svn.pugscode.org/pugs@20159 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -5,23 +5,23 @@ statement
 *1*
 
 expect_term
-my $base = $m<noun>;
+local $blackboard::expect_term_base = $m<noun>;
 for my $post (@{$m->{hash}{post}||[]}) {
-  my $dotty = $post->{hash}{dotty};
-  if($dotty) {
-    $base = Call.new($base,undef,ir($dotty->{hash}{ident}),ir($dotty->{hash}{semilist}));
-  }
-  else {
-    die "AST expect_term hander doesnt know what to do with: \n";
-  }
+  $blackboard::expect_term_base = ir($post)
 }
-$base
+$blackboard::expect_term_base
 
 post
-$m
+*1*
 
 dotty:methodop
-$m
+Call.new($blackboard::expect_term_base,undef,$m<ident>,$m<semilist>)
+
+dotty:postcircumfix
+my $s = *text*;
+my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
+my $ident = "postcircumfix:".$name;
+Call.new($blackboard::expect_term_base,undef,$ident,$m<kludge_name>)
 
 
 term:expect_term
