--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -75,9 +75,17 @@ $n<key>
 PackageDeclarator
 ("\n{ package ".$n<name>.";\n".
  "use Moose;\n".
- "use Perl6::Say;\n". # XXX kludged
+ "use Moose::Autobox; use autobox::Core;\n". #XXX can this be use()d in one place instead?
  $n<block>.
  "\n}\n");
 
 Call
-$n<invocant>.'->'.$n<method>.'('.join(",",@{$n<arguments>||[]}).')'
+my $method = $n<method>;
+if($method =~ 'postcircumfix:(.*)') {
+  my $op = $1;
+  my $arg = join(",",@{$n<arguments>||[]});
+  $op =~ s/ /$arg/;
+  $n<invocant>.'->'.$op;
+} else {
+  $n<invocant>.'->'.$n<method>.'('.join(",",@{$n<arguments>||[]}).')'
+}
