[elf_a] Start of hash support. "my $h = {3,4,5,6}; say $h.{5}" works.
git-svn-id: http://svn.pugscode.org/pugs@20160 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -121,3 +121,10 @@ join("::",@{$m<typename>})
 
 typename
 $m<name>
+
+circumfix:pblock
+if(not $m<lambda> and not $m<signature>) {
+  Lit_Hash.new($m<block><statementlist>)
+} else {
+  die "AST handler circumfix:pblock partially unimplemented";
+}
