--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -89,3 +89,6 @@ if($method =~ 'postcircumfix:(.*)') {
 } else {
   $n<invocant>.'->'.$n<method>.'('.join(",",@{$n<arguments>||[]}).')'
 }
+
+Lit_Hash
+'{'.join(",",@{$n<hash>}).'}'
