[elf_a] infix:= no longer mutates into infix:str (seems to be a YAML::Syck::Load bug).  Fixed Match.to (no longer reports .from).  Fixed comment handling for .config files.
git-svn-id: http://svn.pugscode.org/pugs@20161 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -10,6 +10,10 @@ $n<text>
 Apply
 if($n<code> =~ /^infix:(.+)$/) {
   my $op = $1;
+  #XXX Work around YAML::Syck::Load bug.
+  # str: "="  is becoming str: "str". :/
+  $op = '=' if $op eq 'str';
+  #
   my($l,$r)=@{$n<arguments>};
   if($op eq '~'){ "($l . $r)" }
   elsif($op eq ','){ "$l, $r" }
