[elf_a] Moved infix:= workaround from emit_p5 to ast_handlers.
git-svn-id: http://svn.pugscode.org/pugs@20162 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -55,7 +55,11 @@ quote:qq
 Val_Buf.new($m<text>)
 
 infix
-Apply.new("infix:".*text*,[$m<left>,$m<right>])
+#XXX Work around YAML::Syck::Load bug.
+# str: "="  is becoming str: "str". :/
+my $op = *text*;
+$op = '=' if $op eq 'str';
+Apply.new("infix:".$op,[$m<left>,$m<right>])
 
 scope_declarator:my
 my $vd = $m<scoped>;
