[elf_a] Added "is A", "has $.x", "self".  Switched STD_red_run to --dump5 from --yaml. [elf_b] Added IR node classes.  They compile.
git-svn-id: http://svn.pugscode.org/pugs@20164 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -23,9 +23,15 @@ my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
 my $ident = "postcircumfix:".$name;
 Call.new($blackboard::expect_term_base,undef,$ident,$m<kludge_name>)
 
-
 term:expect_term
 $m<noun>
+
+term
+if(*text* eq 'self') {
+  Apply.new('self',[])
+} else {
+  die "AST term partially unimplemented.\n";
+}
 
 integer
 Val_Int.new(*text*)
@@ -52,7 +58,10 @@ quote:q
 Val_Buf.new($m<text>)
 
 quote:qq
-Val_Buf.new($m<text>)
+my $s = $m<text>;
+$s =~ s/(?<!\\)\\n/\n/g;
+$s =~ s/(?<!\\)\\t/\t/g;
+Val_Buf.new($s)
 
 infix
 #XXX Work around YAML::Syck::Load bug.
@@ -64,6 +73,10 @@ Apply.new("infix:".$op,[$m<left>,$m<right>])
 scope_declarator:my
 my $vd = $m<scoped>;
 Decl.new('my',undef,$vd->[0],$vd->[1])
+
+scope_declarator:has
+my $vd = $m<scoped>;
+Decl.new('has',undef,$vd->[0],$vd->[1])
 
 scoped
 *1*
@@ -118,13 +131,28 @@ param_var
 Var.new($m<sigil>,$m<twigil>,$m<ident>)
 
 package_declarator:class
-PackageDeclarator.new('class',$m<package_def><module_name>->[0],$m<package_def><block>)
+local $blackboard::package_declarator = 'class';
+$m<package_def>
+
+package_declarator:module
+local $blackboard::package_declarator = 'module';
+$m<package_def>
+
+package_declarator:package
+local $blackboard::package_declarator = 'package';
+$m<package_def>
+
+package_def
+PackageDeclarator.new($blackboard::package_declarator,$m<module_name>->[0],$m<traits>,$m<block>)
 
 fulltypename
 join("::",@{$m<typename>})
 
 typename
 $m<name>
+
+trait_verb:is
+Trait.new('is',$m<ident>)
 
 circumfix:pblock
 if(not $m<lambda> and not $m<signature>) {
