--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -17,7 +17,7 @@ if($n<code> =~ /^infix:(.+)$/) {
 }
 elsif($n<code> =~ /^circumfix:(.+)/) {
   my $op = $1;
-  my($arg)=@{$n<arguments>};
+  my($arg)=join(",",@{$n<arguments>||[]});
   if(undef) {
   } else {
     $op =~ s/ /$arg/;
@@ -28,13 +28,25 @@ else {
   my $f = $n<code>;
   if($f =~ /^\$\w+$/) {
      $f.'->('.join(",",@{$n<arguments>}).')';
+  }elsif($f eq 'self') {
+    '$self'
   }else{
      '::'.$f.'('.join(",",@{$n<arguments>}).')';
   }
 }
 
 Decl
-$n<decl>.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
+if($n<decl> eq 'has') {
+  my $default = $n<default>;
+  if(defined $default) {
+    $default = ", default => $default"
+  } else {
+    $default = ""
+  }
+  "has '".$n<var><name>."' => (is => 'rw'$default);"
+} else {
+  $n<decl>.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
+}
 
 Use
 ""
@@ -45,7 +57,19 @@ my $s = Data::Dumper::Dumper($n<buf>); chomp($s);
 $s;
 
 Var
-$n<sigil>.$n<name>
+my $s = $n<sigil>;
+my $t = $n<twigil>||'';
+my $env = '';
+$env = 'e' if $t eq '^';
+my $pre = '';
+$pre = 'a_' if $s eq '@';
+$pre = 'h_' if $s eq '%';
+my $name = $env.$pre.$n<name>;
+if($t eq '.') {
+  '$self->'.$name
+}else{
+  '$'.$name
+}
 
 If
 ('if('.$n<test>.")\n".$n<body>."\n"
@@ -76,8 +100,17 @@ PackageDeclarator
 ("\n{ package ".$n<name>.";\n".
  "use Moose;\n".
  "use Moose::Autobox; use autobox::Core;\n". #XXX can this be use()d in one place instead?
+ join("\n",@{$n<traits>||[]}).
  $n<block>.
  "\n}\n");
+
+Trait
+if($n<verb> eq 'is') {
+  "extends '".$n<expr>."';"
+} else {
+  print STDERR "ERROR: Emitting p5 for Trait verb ".$n<verb>." has not been implemented.\n";
+  "***Trait***"
+}
 
 Call
 my $method = $n<method>;
@@ -91,4 +124,4 @@ if($method =~ 'postcircumfix:(.*)') {
 }
 
 Lit_Hash
-'{'.join(",",@{$n<hash>}).'}'
+'{'.join(",",@{$n<hash>||[]}).'}'
