--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
@@ -9,7 +9,8 @@ Val_Int    text
 
 
 
-PackageDeclarator kind name block
+PackageDeclarator kind name traits block
+Trait     verb expr
 Block     statements
 Quote     concat
 
