[elf_a] Start of for() and while() support.  New -xe option: -xe -e 3  runs 3 in a separate perl. [elf_b] New -e CODE.  Calls STD_red, and builds a Match tree.  Match::describe is unfinished.
git-svn-id: http://svn.pugscode.org/pugs@20168 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -98,6 +98,12 @@ my $s = *text*;
 my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
 Apply.new("circumfix:".$name,$m<kludge_name>)
 
+statement_control:for
+For.new($m<expr>,$m<block>)
+
+statement_control:while
+While.new($m<expr>,$m<block>)
+
 statement_control:if
 If.new($m<if_expr>,$m<if_block>,$m<elsif>,$m<else>)
 
