--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -71,10 +71,16 @@ if($t eq '.') {
   '$'.$name
 }
 
+For
+'for('.$n<expr>."->flatten){\n".$n<body>."\n}"
+
 If
-('if('.$n<test>.")\n".$n<body>."\n"
-.join("",map{'elsif('.$_->[0].")\n".$_->[1]."\n"} @{$n<elsif>})
-.($n<else> ?  "else\n".$n<else>->[0] : ""))
+('if('.$n<test>.") {\n".$n<body>."\n}"
+.join("",map{'elsif('.$_->[0].") {\n".$_->[1]."\n}"} @{$n<elsif>})
+.($n<else> ?  "else {\n".$n<else>->[0]."\n}" : ""))
+
+While
+'while('.$n<test>.") {\n".$n<body>."\n}"
 
 Block
 ''.join(";\n",@{$n<statements>}).''
@@ -99,7 +105,7 @@ $n<key>
 PackageDeclarator
 ("\n{ package ".$n<name>.";\n".
  "use Moose;\n".
- "use Moose::Autobox; use autobox::Core;\n". #XXX can this be use()d in one place instead?
+ "use Moose::Autobox; use autobox; use autobox::Core;\n". #XXX can this be use()d in one place instead?
  join("\n",@{$n<traits>||[]}).
  $n<block>.
  "\n}\n");
