--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ir_nodes.config
@@ -46,6 +46,7 @@ Apply   code arguments
 Return  result
 If      test body elsif else
 While   test body
+For     expr body
 Decl    decl type var default
 Sig     invocant positional
 
