[elf_a] Added kludgy primitives for s/// and file_exists().  Added quote:regex and its IR node.  $x.re_gsub(/b/,'B') emits as $x =~ s/b/B/g; [elf_b] Fleshed out match_describe().  elf_b, given its own code, currently dumps a description of the Match tree.  >4x slower than elf_a does.
git-svn-id: http://svn.pugscode.org/pugs@20171 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -12,12 +12,18 @@ for my $post (@{$m->{hash}{post}||[]}) {
 $blackboard::expect_term_base
 
 post
-*1*
+$m<dotty> or $m<postop>
 
 dotty:methodop
 Call.new($blackboard::expect_term_base,undef,$m<ident>,$m<semilist>)
 
 dotty:postcircumfix
+my $s = *text*;
+my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
+my $ident = "postcircumfix:".$name;
+Call.new($blackboard::expect_term_base,undef,$ident,$m<kludge_name>)
+
+postcircumfix
 my $s = *text*;
 my $name = substr($s,0,1).' '.substr($s,-1,1); # XXX :(
 my $ident = "postcircumfix:".$name;
@@ -62,6 +68,10 @@ my $s = $m<text>;
 $s =~ s/(?<!\\)\\n/\n/g;
 $s =~ s/(?<!\\)\\t/\t/g;
 Val_Buf.new($s)
+
+quote:regex
+my $s = $m<text>;
+Val_Rx.new($s)
 
 infix
 #XXX Work around YAML::Syck::Load bug.
