--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -56,6 +56,9 @@ local $Data::Dumper::Terse = 1;
 my $s = Data::Dumper::Dumper($n<buf>); chomp($s);
 $s;
 
+Val_Rx
+'qr/'.$n<pat>.'/'
+
 Var
 my $s = $n<sigil>;
 my $t = $n<twigil>||'';
