[elf_a] Can now declare locals "my $^x", and assign to attributes "$.x = 3". [elf_b] Starting work on ast to ir conversion.  New p6 ast_to_ir.pl and ast_handlers.pl.  They compile (noisily), but don't run yet.
git-svn-id: http://svn.pugscode.org/pugs@20173 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -6,8 +6,8 @@ statement
 
 expect_term
 local $blackboard::expect_term_base = $m<noun>;
-for my $post (@{$m->{hash}{post}||[]}) {
-  $blackboard::expect_term_base = ir($post)
+for (@{(($m->{hash}{post}||[]))}) {
+  $blackboard::expect_term_base = ir($_)
 }
 $blackboard::expect_term_base
 
@@ -46,7 +46,7 @@ subcall
 Apply.new($m<subshortname>,$m<semilist>)
 
 name
-$m<ident>
+*text* # $m<ident>
 
 statement_control:use
 Use.new($m<module_name>)
@@ -77,7 +77,7 @@ infix
 #XXX Work around YAML::Syck::Load bug.
 # str: "="  is becoming str: "str". :/
 my $op = *text*;
-$op = '=' if $op eq 'str';
+if($op eq 'str') { $op = '=' };
 Apply.new("infix:".$op,[$m<left>,$m<right>])
 
 scope_declarator:my
@@ -87,6 +87,10 @@ Decl.new('my',undef,$vd->[0],$vd->[1])
 scope_declarator:has
 my $vd = $m<scoped>;
 Decl.new('has',undef,$vd->[0],$vd->[1])
+
+scope_declarator:our
+my $vd = $m<scoped>;
+Decl.new('our',undef,$vd->[0],$vd->[1])
 
 scoped
 *1*
@@ -130,8 +134,10 @@ block
 Block.new($m<statementlist>)
 
 routine_declarator:routine_def
-my $ident = $m<ident> ? $m<ident>->[0] : "";
-my $sig = $m<multisig> ? $m<multisig>->[0] : Sig.new(undef,[]);
+my $ident = "";
+if($m<ident>) { $ident = $m<ident>->[0] };
+my $sig = Sig.new(undef,[]);
+if($m<multisig>) { $sig = $m<multisig>->[0] };
 Sub.new($ident,$sig,$m<block>)
 
 routine_declarator:method_def
@@ -162,10 +168,10 @@ package_def
 PackageDeclarator.new($blackboard::package_declarator,$m<module_name>->[0],$m<traits>,$m<block>)
 
 fulltypename
-join("::",@{$m<typename>})
+join("::",@{(($m<typename>))})
 
 typename
-$m<name>
+*text* # $m<name>
 
 trait_verb:is
 Trait.new('is',$m<ident>)
