--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -13,6 +13,13 @@ if($n<code> =~ /^infix:(.+)$/) {
   my($l,$r)=@{$n<arguments>};
   if($op eq '~'){ "($l . $r)" }
   elsif($op eq ','){ "$l, $r" }
+  elsif($op eq '=') {
+    my $t = $n->{arguments}[0]{twigil};
+    if($t && $t eq '.') {
+      $l.'('.$r.')'
+    }
+    else { "($l $op $r)" }
+  }
   else { "($l $op $r)" }
 }
 elsif($n<code> =~ /^circumfix:(.+)/) {
@@ -44,7 +51,12 @@ if($n<decl> eq 'has') {
     $default = ""
   }
   "has '".$n<var><name>."' => (is => 'rw'$default);"
-} else {
+}
+elsif($n<var><twigil> eq '^') {
+  "use vars '".$n<var>."';".
+  'local'.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
+}
+else {
   $n<decl>.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
 }
 
@@ -65,6 +77,7 @@ my $t = $n<twigil>||'';
 my $env = '';
 $env = 'e' if $t eq '^';
 my $pre = '';
+$pre = 's_' if $s eq '$' && $env eq 'e';
 $pre = 'a_' if $s eq '@';
 $pre = 'h_' if $s eq '%';
 my $name = $env.$pre.$n<name>;
