[elf] elf_b can now create and describe IR trees. [STD_red] bugfix r20172 sigil escaping.
git-svn-id: http://svn.pugscode.org/pugs@20175 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -6,7 +6,8 @@ statement
 
 expect_term
 local $blackboard::expect_term_base = $m<noun>;
-for (@{(($m->{hash}{post}||[]))}) {
+my $post = $m->{'hash'}{'post'} || [];
+for (@{(($post))}) {
   $blackboard::expect_term_base = ir($_)
 }
 $blackboard::expect_term_base
@@ -58,7 +59,12 @@ module_name:normal
 *text*
 
 term:listop
-Apply.new($m<ident>,[$m<arglist>])
+my $not_really_an_arglist = $m<arglist>;
+if($m<arglist>) {
+  Apply.new($m<ident>,[$not_really_an_arglist]) #XXX
+} else {
+  Apply.new($m<ident>,[])
+}
 
 quote:q
 Val_Buf.new($m<text>)
