--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -1,6 +1,7 @@
 CompUnit
-"\x23".'line 2 emitted_p5
-package Main;
+local $whiteboard::in_package = [];
+"\x23".'line 2 emitted_p5_'.int(rand(10000)).'
+package main; # not Main, otherwise ::foo() hack for sub()s doesnt work.
 use Data::Dumper;
 '.join(";\n",@{$n<statements>})
 
@@ -53,7 +54,9 @@ if($n<decl> eq 'has') {
   "has '".$n<var><name>."' => (is => 'rw'$default);"
 }
 elsif($n<var><twigil> eq '^') {
-  "use vars '".$n<var>."';".
+  my $name = $n<var>;
+  $name =~ s/^(.)::/$1/;
+  "{package main; use vars '".$name."'};".
   'local'.' '.$n<var>.($n<default> ? ' = '.$n<default> : '')
 }
 else {
@@ -74,6 +77,7 @@ Val_Rx
 Var
 my $s = $n<sigil>;
 my $t = $n<twigil>||'';
+#XXX $pkg:x -> s_pkg::x :(
 my $env = '';
 $env = 'e' if $t eq '^';
 my $pre = '';
@@ -83,6 +87,9 @@ $pre = 'h_' if $s eq '%';
 my $name = $env.$pre.$n<name>;
 if($t eq '.') {
   '$self->'.$name
+}elsif($t eq '^') {
+  $name =~ s/::/__/g;
+  '$'.'::'.$name
 }else{
   '$'.$name
 }
@@ -105,7 +112,7 @@ Sub
 'sub '.$n<name>.'{'.$n<sig>.$n<block>.'}'
 
 Method
-'sub '.$n<name>.'{my $self=shift;'.$n<sig>.$n<block>.'}'
+'sub '.$n<name>.'{my $self=CORE::shift;'.$n<sig>.$n<block>.'}'
 
 
 Sig
@@ -119,16 +126,19 @@ Lit_SigArgument
 $n<key>
 
 PackageDeclarator
-("\n{ package ".$n<name>.";\n".
+local $whiteboard::in_package = [@{(($whiteboard::in_package))},$n<name>];
+my $name = join('::',@{(($whiteboard::in_package))});
+("\n{ package ".$name.";\n".
  "use Moose;\n".
- "use Moose::Autobox; use autobox; use autobox::Core;\n". #XXX can this be use()d in one place instead?
+ "use Moose::Autobox; use autobox; use autobox::Core; use autobox UNDEF => 'UNDEF';\n". #XXX can this be use()d in one place instead?
  join("\n",@{$n<traits>||[]}).
  $n<block>.
  "\n}\n");
 
 Trait
 if($n<verb> eq 'is') {
-  "extends '".$n<expr>."';"
+  my $name = join('::',splice(@{(($whiteboard::in_package))},0,-1),$n<expr>);
+  "extends '".$name."';"
 } else {
   print STDERR "ERROR: Emitting p5 for Trait verb ".$n<verb>." has not been implemented.\n";
   "***Trait***"
