[elf_a] '$.foo()' now calls method foo.  Use '($.foo).()' or 'my $tmp = $.foo; $tmp()' to call a sub() stored in 'has $.foo'.
git-svn-id: http://svn.pugscode.org/pugs@20177 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/ast_handlers.config
@@ -44,7 +44,12 @@ integer
 Val_Int.new(*text*)
 
 subcall
-Apply.new($m<subshortname>,$m<semilist>)
+my $t = $m<subshortname><twigil>;
+if($t && $t eq '.') {
+  Call.new(Apply.new('self',[]),undef,$m<subshortname><desigilname><ident>,$m<semilist>)
+} else {
+  Apply.new($m<subshortname>,$m<semilist>)
+}
 
 name
 *text* # $m<ident>
