--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -146,7 +146,10 @@ if($n<verb> eq 'is') {
 
 Call
 my $method = $n<method>;
-if($method =~ 'postcircumfix:(.*)') {
+if($method =~ 'postcircumfix:< >') {
+  $n<invocant>.'->'."{'".$n<arguments>."'}";
+}
+elsif($method =~ 'postcircumfix:(.*)') {
   my $op = $1;
   my $arg = join(",",@{$n<arguments>||[]});
   $op =~ s/ /$arg/;
